--- a/angular_website/src/app/signup/signup.component.css
+++ b/angular_website/src/app/signup/signup.component.css
@@ -5,7 +5,7 @@
     padding: 40px;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 100%;
     transform: translate(-50%,50%);
     background: linear-gradient(90deg, hsla(205, 46%, 30%, 1) 0%, hsla(260, 29%, 36%, 1) 100%);
 }
@@ -15,4 +15,8 @@ h6{
 }
 label{
     color: #fff;
+}
+.container{
+    
+    margin-bottom: 100%;
 }
